# tiago-reasoner

./: README.md  setup.txt
reasoner/: CMakeLists.txt  package.xml  setup.cfg  setup.py
reasoner/msg/: GDRNObject.msg  GDRNSolution.msg
reasoner/reasoner/: classes.py  prob_demo.py  reasoner_node.py
